<resources>
    <string name="app_name">Time Converter App</string>
    <string name="title">Time Zone Converter</string>
    <string name="timezone_title">Current Time Zone</string>
    <string name="original_time">Original Time</string>
    <string name="settings">Settings</string>
    <string name="convert">Convert</string>
    <string name="home_time_zone">Home Time Zone</string>
    <string name="save">Save</string>
    <string name="edit_time">Edit Time</string>
    <string-array name="timezones">
        <item>America/New_York</item>
        <item>America/Los_Angeles</item>
        <item>Europe/Berlin</item>
        <item>Europe/Istanbul</item>
        <item>Asia/Singapore</item>
        <item>Asia/Tokyo</item>
        <item>Australia/Canberra</item>
        <item>Africa/Cape_Town</item>
    </string-array>
    <string-array name="gmt">
            <item>GMT -05:00</item> <!-- America/New_York -->
            <item>GMT -08:00</item> <!-- America/Los_Angeles -->
            <item>GMT +01:00</item> <!-- Europe/Berlin -->
            <item>GMT +02:00</item> <!-- Europe/Istanbul -->
            <item>GMT +08:00</item> <!-- Asia/Singapore -->
            <item>GMT +09:00</item> <!-- Asia/Tokyo -->
            <item>GMT +10:00</item> <!-- Australia/Canberra -->
            <item>GMT +02:00</item> <!-- Africa/Cape_Town -->
    </string-array>
</resources>